# agentic-engram

./: CONTRIBUTING.md  README.ja.md  README.md  pyproject.toml
docs/prds/: 設計.md
example/skills/iterative-engram-recall/: SKILL.md
example/skills/iterative-engram-recall/agents/: openai.yaml
scripts/: ae-console.py  ae-consolidate.py  ae-groom.py  ae-miner.py  ae-save.py
src/engram/: __init__.py  db.py  embedder.py  groom.py  prompts_groom.py  recall.py  save.py
tests/: test_cursor.py  test_groom.py  test_integration.py  test_miner.py  test_prompts.py  test_recall.py  test_save.py
