[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-engram"
version = "0.1.0"
description = "Autonomous local memory ecosystem for AI coding agents"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "lancedb",
    "sentence-transformers",
    "pyarrow",
    "streamlit",
    "kuzu",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2"]

[project.urls]
Repository = "https://github.com/sert-xx/agentic-engram"

[project.scripts]
ae-recall = "engram.cli.recall:main"
ae-save = "engram.cli.save:main"
ae-miner = "engram.cli.miner:main"
ae-consolidate = "engram.cli.consolidate:main"
ae-groom = "engram.cli.groom:main"
ae-console = "engram.cli.console:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
